<resources>
    <string name="app_name">Binner\'s Project</string>

    <string name="packageName">ca.com.androidbinnersproject</string>

    <string name="login">Log In</string>
    <string name="txtLoginWith">Log in with</string>
    <string name="createAccount">Create an Account</string>
    <string name="forgotPassword">Forgot Password?</string>

    <string name="facebook_app_id">934314433288495</string>
    <string name="fabric_id">d78872197696ec6106cdc9761625d9950add5f65</string>
    <string name="fill_login">Please write the e-mail and password correctly!</string>
    <string name="has_no_connection">Please check your internet connection!</string>
    <string name="executing_sign_in">Executing SignIn!</string>
    <string name="login_error">There is a problem on trying to login. Try again!</string>
    <string name="invalid_email">Please write a valid e-mail</string>
    <string name="create_user_without_permission">We will never post without your permission.</string>
    <string name="create_user_terms_privacy">By signing up I agree to the Binner\'s Project Service Terms and Privacy Policy</string>
    <string name="create_user_validation_name">Name should not be empty</string>
    <string name="create_user_validation_email">Email should be valid</string>
    <string name="create_user_validation_password">Password need at least 6 characters</string>
    <string name="forgotPasswordTitle">Forgot your password?</string>
    <string name="forgotPasswordBody">Enter your email address and we\'ll send you a link to set a new one</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="nav_drawer_labels">
        <item>My Profile</item>
        <item>Donate</item>
        <item>Help</item>
        <item>Binners</item>
        <item>Account</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="pickup_calendar_info">Please provide your preferred date for a pick-up.</string>
    <string name="pickup_additional_notes_infoOne">Please provide any further instructions for the binner.</string>
    <string name="pickup_additional_notes_infoTwo">"Let\'s make it easy for your local binner to find \nyour bottles and cans! Leave them any \nnotes about where to get the pick-up."</string>
    <string name="pickup_additional_notes_hint">"E.g. Hey! I\'ve left  my bottles and cans for you by \nthe recycling bin in the alleyway."</string>

    <string name="pickup_time_instructions">Please provide your preferred pickup time\nA binner will arrive at the time you specify</string>
    <string name="pickup_instructions_top">Please provide any further instructions\nfor the binner</string>
    <string name="pickup_instructions_main">Let\'s make it easy for your local binner to\nfind your bottles and cans! Leave them any\nnotes about where to get the pick-up</string>
    <string name="pickup_instructions_hint">E.g. Hey! I\'ve left my bottles and cans for you by the recycling bin in the alleyway</string>

    <string name="pickup_bottles_top">Give us a rough estimate of how many\nredeemables you have for pick-up</string>
    <string name="pickup_bottles_advice">No less than 15 bottles please</string>
    <string name="pickup_bottles_numberofbottles">Number of bottles</string>
    <string name="pickup_bottles_takepicture">Take a picture</string>

</resources>
