<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pickupBgColor">

    <TextView
        android:id="@+id/pickup_additional_notes_txtInfoOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pickup_additional_notes_infoOne"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        app:layout_marginLeftPercent="6%"
        app:layout_marginRightPercent="6%"
        app:layout_marginTopPercent="6%" />

    <TextView
        android:id="@+id/pickup_additional_notes_txtInfoTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickup_additional_notes_txtInfoOne"
        android:gravity="center_horizontal"
        android:text="@string/pickup_additional_notes_infoTwo"
        app:layout_marginLeftPercent="6%"
        app:layout_marginRightPercent="6%"
        app:layout_marginTopPercent="2%" />

    <EditText
        android:id="@+id/pickup_additional_notes_edtInformation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pickup_additional_notes_txtInfoTwo"
        android:gravity="top"
        android:hint="@string/pickup_additional_notes_hint"
        android:inputType="textMultiLine"
        android:background="@color/whiteBackground"
        android:textSize="14sp"
        app:layout_marginBottomPercent="10%"
        app:layout_marginLeftPercent="6%"
        app:layout_marginRightPercent="6%"
        app:layout_marginTopPercent="7%" />

</android.support.percent.PercentRelativeLayout>