<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.com.androidbinnersproject.activities.pickup.PickupInstructionsFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INSTRUCTIONS"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_instructions_top"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_instructions_main"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_widthPercent="85%"
            app:layout_heightPercent="80%"
            android:gravity="top"
            android:hint="@string/pickup_additional_notes_hint"
            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"/>
        
    </android.support.percent.PercentRelativeLayout>

</LinearLayout>
