<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.com.androidbinnersproject.activities.MainActivity"
    android:background="@drawable/app_background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtLoginWith"
        android:id="@+id/textView"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_toLeftOf="@+id/btnTwitter"
        android:background="@drawable/btnfacebook"
        android:layout_alignTop="@+id/btnTwitter" />

    <Button
        android:id="@+id/btnTwitter"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btntwitter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_toRightOf="@+id/btnTwitter"
        android:layout_toEndOf="@+id/btnTwitter"
        android:background="@drawable/btngoogle" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/linearLayout"
        android:elevation="8dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnTwitter"
        android:layout_marginTop="5dp"
        android:alpha="0.8"
        android:background="#ffffff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtUser"
            android:hint="email"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:inputType="textAutoComplete"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="password"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:inputType="textPassword"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/button_material_light"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/txtCreateAccount"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:typeface="sans"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:id="@+id/txtForgotPassword"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/txtCreateAccount"
        android:layout_alignRight="@+id/btnGoogle"
        android:typeface="sans"
        android:layout_alignParentRight="true" />

</RelativeLayout>
